--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -246,61 +246,71 @@ and larger test accuracy, as predicted by our theory.
 \hline
 Architecture 
  & Model
- & Top 1 Error & $\hat{\alpha} $\\
+ & Top 1 Accuracy & $\hat{\alpha} $\\
  \hline
  Working Examples & & & \\
  \hline
- DenseNet & densenet121 & 25.57 & \\
-& densenet161 & 22.86 & \\
-& densenet169 & 24.4 & \\
-& densenet201 & 23.1 & \\
+ DenseNet
+& densenet121 & 74.43 & 1.25 \\
+& densenet161 & 77.14 & 0.84 \\
+& densenet169 & 75.60 & 0.68 \\
+& densenet201 & 76.90 & 0.50 \\
 \hline
-SqueezeNet & squeezenet1\_0 &  & \\
-& squeezenet1\_1 &  & \\
- \hline
- CondenseNet & condensenet74\_c4\_g4  &  & \\
- & condensenet74\_c8\_g8 &  & \\
+SqueezeNet
+& squeezenet\_v1\_0 & 58.69 & 2.55 \\
+& squeezenet\_v1\_1 & 58.18 & 1.56 \\
 \hline
-DPN & dpn68 & 24.17 & \\
-& dpn98 & 20.81 & \\
-& dpn131 & 20.54 & \\
+CondenseNet
+& condensenet74\_c4\_g4 & 73.75 & -1.83 \\
+& condensenet74\_c8\_g8 & 71.07 & -1.63 \\
 \hline
-ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
-& shufflenetv2\_w1 & 34.39 & \\
+DPN
+& dpn68 & 75.83 & 0.57 \\
+& dpn98 & 79.19 & 0.11 \\
+& dpn131 & 79.46 & -0.13 \\
 \hline
-MobileNet & mobilenet\_wd4 & 46.26 & \\
-& mobilenet\_wd2 & 36.3 & \\
-& mobilenet\_w3d4 & 33.54 & \\
-& mobilenet\_w1 & 29.86 & \\
+ShuffleNet
+& shufflenetv2\_wd2 & 58.52 & 5.12 \\
+& shufflenetv2\_w1 & 65.61 & 2.86 \\
 \hline
-MobileNetV2 & mobilenetv2\_wd4 & 49.72 & \\
-& mobilenetv2\_wd2 & 36.54 & \\
-& mobilenetv2\_w3d4 & 31.89 & \\
-& mobilenetv2\_w1 & 29.31 & \\
+MobileNet
+& mobilenet\_wd4 & 53.74 & 5.54 \\
+& mobilenet\_wd2 & 63.70 & 4.26 \\
+& mobilenet\_w3d4 & 66.46 & 4.41 \\
+& mobilenet\_w1 & 70.14 & 4.19 \\
+& mobilenetv2\_wd4 & 50.28 & 12.12 \\
+& mobilenetv2\_wd2 & 63.46 & 4.69 \\
+& mobilenetv2\_w3d4 & 68.11 & 4.21 \\
+& mobilenetv2\_w1 & 70.69 & 3.50 \\
 \hline
-SE-ResNet & seresnet50 & 22.47 & \\
-& seresnet101 & 21.88 & \\
-& seresnet152 & 21.48 & \\
+SE-ResNet
+& seresnet50 & 77.53 & -0.35 \\
+& seresnet101 & 78.12 & -1.24 \\
+& seresnet152 & 78.52 & -1.53 \\
 \hline
-SE-ResNeXt & seresnext50\_32x4d & 21.0 & \\
-& seresnext101\_32x4d & 19.96 & \\
+SE-ResNeXt
+& seresnext50\_32x4d & 79.00 & 1.81 \\
+& seresnext101\_32x4d & 80.04 & 0.76 \\
 \hline
 Counterexamples & & &  \\
 \hline
-ResNeXt & resnext101\_32x4d &  & \\
-& resnext101\_64x4d &  & \\
+ResNeXt
+& resnext101\_32x4d & 78.19 & 1.22 \\
+& resnext101\_64x4d & 78.96 & 1.34 \\
 \hline
-MeNet & menet108\_8x1\_g3 & 43.92 & \\
-& menet128\_8x1\_g4 & 43.95 & \\
-& menet228\_12x1\_g3 & 33.57 & \\
-& menet256\_12x1\_g4 & 33.41 & \\
-& menet348\_12x1\_g3 & 30.1 & \\
-& menet352\_12x1\_g8 & 33.31 & \\
-& menet456\_24x1\_g3 & 28.4 & \\
+MeNet
+& menet108\_8x1\_g3 & 56.08 & 5.31 \\
+& menet128\_8x1\_g4 & 56.05 & 4.46 \\
+& menet228\_12x1\_g3 & 66.43 & 4.82 \\
+& menet256\_12x1\_g4 & 66.59 & 4.97 \\
+& menet348\_12x1\_g3 & 69.90 & 5.74 \\
+& menet352\_12x1\_g8 & 66.69 & 4.42 \\
+& menet456\_24x1\_g3 & 71.60 & 5.11 \\
 \hline
-FDMobileNet & fdmobilenet\_wd4 & 55.77 & \\
-& fdmobilenet\_wd2 & 43.85 & \\
-& fdmobilenet\_w1 & 34.7 & \\
+FDMobileNet
+& fdmobilenet\_wd4 & 44.23 & 6.40 \\
+& fdmobilenet\_wd2 & 56.15 & 7.01 \\
+& fdmobilenet\_w1 & 65.30 & 7.10 \\
 \hline
 \end{tabular}
 \end{center}
