--- a/test_accuracy_paper/test_accuracy_empirical.tex
+++ b/test_accuracy_paper/test_accuracy_empirical.tex
@@ -61,27 +61,25 @@ We emphasize that, \emph{for our analysis, we do not need to retrain these model
 \begin{center}
 \begin{tabular}{|p{0.75in}|c|c|c|c|c|c|c|}
 \hline
-Architecture 
- & Model &Top1 
- & Top5 & $L$ & $N_{\alpha}$ & $\hat{\alpha}$ \\
+Model & Top1 Accuracy & $\hat{\alpha}$ \\
 \hline
-VGG11 & VGG11 & & & & & \\
-  & VGG11 BN & & & & & \\
+VGG11 & 68.97 & 1.84 \\
+VGG11\_BN & 70.45 & 1.60 \\
 \hline
-VGG13 & VGG13 & & & & & \\
-  & VGG13 BN & & & & & \\
+VGG13 & 69.66 & 1.65 \\
+VGG13\_BN & 71.51 & 1.36 \\
 \hline
-VGG16 & VGG16 & & & & & \\
-  & VGG16 BN & & & & & \\
+VGG16 & 71.64 & 1.41 \\
+VGG16\_BN & 73.52 & 1.08 \\
 \hline
-VGG19 & VGG19 & & & & & \\
-  & VGG19 BN & & & & & \\
+VGG19 & 72.08 & 1.16 \\
+VGG19\_BN & 74.27 & 0.81 \\
 \hline
 \end{tabular}
 \end{center}
 \caption{%
-         Results for VGG Architectures and DNN Models.
-         \michael{Make sure Accuracy vs Error is done correctly.}
+         Results for VGG Architecture.   The Top1 Accuracy is defined
+as the $100.0$ minus the Top1 reported error.
          }
 \label{table:models_VGG}
 \end{table}
@@ -139,35 +137,35 @@ Moreover, whereas the log norm relation has 2 outliers, VGG13 and VGG13\_BN, the
 \hline
 Architecture 
  & Model
- & Top 1 Error & $\hat{\alpha}$ \\
+ & Top 1 Accuracy & $\hat{\alpha}$ \\
 \hline
-ResNet (small)  & resnet10 & 37.46 & \\
-& resnet12 & 36.18 & \\
-& resnet14 & 33.17 & \\
-& resnet16 & 30.9 & \\
+ResNet (small)   & resnet10 & 62.54 & 1.94 \\
+ & resnet12 & 63.82 & 0.74 \\
+ & resnet14 & 66.83 & 1.70 \\
+ & resnet16 & 69.10 & 1.49 \\
+ \hline
+ ResNet18  & resnet18\_wd4 & 50.50 & 1.83 \\
+ & resnet18\_wd2 & 62.96 & 1.82 \\
+ & resnet18\_w3d4 & 66.39 & 0.28 \\
+ & resnet18 & 70.48 & 1.09 \\
+ \hline
+ResNet34 & resnet34 & 74.34 & -0.42 \\
 \hline
-ResNet18 & resnet18\_wd4 & XX & \\
-& resnet18\_wd2 & XX & \\
-& resnet18\_wd3d4& XX & \\
-& resnet18 & XX & \\
-
+ResNet50  & resnet50 & 76.21 & 0.13 \\
+ & resnet50b & 76.95 & 0.09 \\
+ \hline
+ResNet101 & resnet101 & 78.10 & -0.67 \\
+ & resnet101b & 78.55 & -0.92 \\
 \hline
-ResNet34 & resnet34 & 25.66 & \\
-\hline
-ResNet50 & resnet50 & 23.79 & \\
-& resnet50b &  & \\
-
-\hline
-ResNet101 & resnet101 & XX.XX & \\
-& resnet101b & XX.XX & \\
-\hline
-ResNet152 & resnet152 & XX,XX & \\
-& resnet152b & XX,XX & \\
+ResNet152 & resnet152 & 78.74 & -1.11 \\
+ & resnet152b & 79.26 & -1.74 \\
 \hline
 \end{tabular}
 \end{center}
-\caption{Results for ResNet Architectures and DNN Models.
-         \michael{Make sure Accuracy vs Error is done correctly.}
+\caption{Results for ResNet Architectures and DNN Models.  The Top1 Accuracy is defined
+as the $100.0$ minus the Top1 reported error.  Some $\hat{\alpha}<0$ because the of how
+the ResNet weight matrices are internally scale and normalized, which makes the maximum eigenvalue
+less then one, $\lambda^{max}<1$.
         }
 \label{table:models_resnet}
 \end{table}
